2007-08-18  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/agents/util.py:
	* gaupol/parser.py:
	* gaupol/tags/taglib.py:
	Rename TagLibrary.remove_redundant to TagLibrary.clean.

	* gaupol/tags/subrip.py (_get_clean_tags):
	Relocate spaces after opening tags and before closing tags.

2007-08-18  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/patterns/Latn.common-error.in:
	* data/patterns/Zyyy.common-error.in:
	Tighten patterns to fix remaining false positives.

2007-08-17  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/patterns/Latn.common-error.conf:
	* data/patterns/Latn.common-error.in:
	* data/patterns/Latn-en.common-error.in:
	Tighten patterns based on a test set of 391 reasonably good subtitle
	files to remove almost all false positives.

2007-08-17  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/patterns/Latn.common-error.in:
	* data/patterns/Latn.hearing-impaired.in:
	* gaupol/const.py:
	* gaupol/files/mpsub.py:
	Remove redundant backslashes in regular expressions.

2007-08-17  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/parser.py (_set_margins):
	Check for tags in the middle of the line.

2007-08-17  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/patterns/Latn.common-error.in:
	Adjust based on preliminary testing.

	* gaupol/gtk/assistants/text/confirmation.py:
	(_get_preview_sensitivity): Handle None value of row.

2007-08-17  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/gaupol.gtk.conf.spec:
	Split text assistant pages into sections of their own.

	* data/glade/text-assistant-common-error-page.glade:
	* gaupol/gtk/assistants/text/error.py:
	New files for a common error correction page.

	* data/patterns/Latn.common-error.conf:
	* data/patterns/Latn.common-error.in:
	* data/patterns/Latn-en.common-error.conf:
	* data/patterns/Latn-en.common-error.in:
	* data/patterns/Zyyy.common-error.conf:
	* data/patterns/Zyyy.common-error.in:
	Rename "error" to "common-error".
	Rename "Class" to "Classes".

	* gaupol/agents/text.py (correct_common_errors):