@@ -4,5 +4,8 @@
   <pattern name="Letters &quot;l&quot; in upper case words" enabled="true"/>
   <pattern name="Letters &quot;l&quot; starting words" enabled="true"/>
   <pattern name="Zeros in upper case words" enabled="true"/>
+  <pattern name="Spaces after capital letters" enabled="true"/>
   <pattern name="Spaces around apostrophes" enabled="true"/>
+  <pattern name="Okays" enabled="false"/>
+  <pattern name="Periods after titles" enabled="false"/>
 </patterns>
